--- a/frontend/views/partials/navigation/nav-menu.ejs
+++ b/frontend/views/partials/navigation/nav-menu.ejs
@@ -17,7 +17,7 @@
 
 <nav class="d-flex flex-column flex-shrink-0 p-3 bg-light sidebar" style="width: 280px;">
   <a href="/" class="d-flex align-items-center me-md-auto link-dark text-decoration-none">
-    <span class="fs-4">Vat Free App</span>
+    <span class="fs-4">TorqueVAT</span>
   </a>
  
   <ul class="nav nav-pills flex-column mb-auto mt-5">
@@ -47,7 +47,7 @@
       </li>
       <li>
         <a href="/auth/signup/merchant" class="nav-link link-dark">
-          Become a Vat Free Merchant
+          Become a VAT-free merchant
         </a>
       </li>
     <% } else { %>
@@ -69,7 +69,7 @@
       <% } %> 
       <% if ( locals.user.role == "USER" ) { %> 
         <li >
-          <a class="nav-link" href="#"><strong>BALANCE VAT ESCROW :</strong> <%=vat_token_balance_escrow%></a>
+          <a class="nav-link" href="#"><strong>VAT ESCROW BALANCE :</strong> <%=vat_token_balance_escrow%></a>
         </li>
       <% } %> 
     <% } %>
